--- a/index.html
+++ b/index.html
@@ -4,10 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel=“stylesheet”
+    href=“https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css”>
+    <link rel="stylesheet" href="style.css" />
     <title>핫소스</title>
   </head>
 
   <body>
-    <script></script>
+    <nav>
+      <div id="logo">Home Logo</div>
+      <ul>
+        <li class="nav-item">My page</li>
+        <li class="nav-item">Login</li>
+      </ul>
+    </nav>
+    <main>
+      <div class="container">
+        <h1 id="Profile-title">Profile</h1>
+        <img src="" alt="" />
+        <input type="text" />
+        <h2>내 게시물</h2>
+      </div>
+      <!-- 내 게시물 보기 -->
+    </main>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
