--- a/index.html
+++ b/index.html
@@ -15,17 +15,29 @@
       <div id="logo">Home Logo</div>
       <ul>
         <li class="nav-item">My page</li>
-        <li class="nav-item">Login</li>
+        <li class="nav-item state-login">Logout</li>
       </ul>
     </nav>
     <main>
-      <div class="container">
-        <h1 id="Profile-title">Profile</h1>
-        <img src="" alt="" />
-        <input type="text" />
-        <h2>내 게시물</h2>
+      <!-- Side bar 보존 -->
+      <div id="container">
+        <div id="profile">
+          <h1 class="font-h1" id="Profile-title">Profile</h1>
+          <!-- 임시 프로필 이미지 -->
+          <img id="Profile-img" src="./img/hide-the-pain-harold.jpeg" alt="" />
+          <input class="input-body1 font-body" type="text" placeholder="이름" />
+        </div>
+        <div class="user-article">
+          <h2 class="font-h2">내 게시물</h2>
+          <!-- 내 게시물 보기 -->
+          <article>
+            <img src="./img/RemixJS.jpg" alt="" />
+            <h3></h3>
+            <div class="article-date"></div>
+          </article>
+        </div>
       </div>
-      <!-- 내 게시물 보기 -->
+      <!-- Side bar 보존 -->
     </main>
     <script src="main.js" type="module"></script>
   </body>
