Update article card

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           <h1 class="font-h2" id="Profile-title">Profile</h1>
           <!-- 임시 프로필 이미지 -->
           <img id="Profile-img" src="./img/hide-the-pain-harold.jpeg" alt="" />
-          <input class="input-body1 font-body" type="text" placeholder="Name" />
+          <input
+            class="input-body1 font-body1"
+            type="text"
+            placeholder="Name"
+          />
         </div>
         <div class="my-article">
           <h2 class="font-h2 my-article-section-title">My article</h2>
@@ -38,7 +42,7 @@
                     Focused on web standards and modern web app UX, you’re
                     simply going to build better websites
                   </h3>
-                  <div class="article-date font-tiny">2022.11.18.</div>
+                  <div class="article-date font-body2">2022.11.18.</div>
                 </div>
               </article>
             </li>
@@ -50,7 +54,7 @@
                     Focused on web standards and modern web app UX, you’re
                     simply going to build better websites
                   </h3>
-                  <div class="article-date font-tiny">2022.11.18.</div>
+                  <div class="article-date font-body2">2022.11.18.</div>
                 </div>
               </article>
             </li>
