--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <nav>
-      <div id="logo">Home Logo</div>
+      <img src="./img/Logo_01.svg" alt="Interaction Awards Logo" />
       <ul>
         <li class="nav-item">My page</li>
         <li class="nav-item state-login">Logout</li>
@@ -21,16 +21,20 @@
     <main>
       <!-- Side bar 보존 -->
       <div id="container">
-        <div id="profile">
+        <form id="profile">
           <h1 class="font-h2" id="Profile-title">Profile</h1>
           <!-- 임시 프로필 이미지 -->
+          <!-- TODO 이미지 클릭용 input -->
           <img id="Profile-img" src="./img/hide-the-pain-harold.jpeg" alt="" />
-          <input
-            class="input-body1 font-body1"
-            type="text"
-            placeholder="Name"
-          />
-        </div>
+          <div class="user-name">
+            <input
+              class="input-body1 font-body1"
+              type="text"
+              placeholder="Name"
+            />
+            <button class="font-body1">Update</button>
+          </div>
+        </form>
         <div class="my-article">
           <h2 class="font-h2 my-article-section-title">My article</h2>
           <ul id="article-lists">
