--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <body>
     <nav>
-      <img src="./img/Logo_01.svg" alt="Interaction Awards Logo" />
+      <img id="logo" src="./img/Logo_01.svg" alt="Interaction Awards Logo" />
       <ul>
         <li class="nav-item">My page</li>
         <li class="nav-item state-login">Logout</li>
