--- a/index.html
+++ b/index.html
@@ -3,13 +3,32 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel=“stylesheet” href=“https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css”>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>핫소스</title>
 </head>
 
 <body>
-
+    <div class="page-container align-center">
+        <h1>About</h1>
+        <div>Check Out the Socials</div>
+        <hr />
+        <div class="socials-container">
+            <a href="https://www.youtube.com/channel/UC6pFfiYWbtNkU-u2ZXUfzZw" class="socials-card" target="_blank">
+                <i class="mdi mdi-youtube"></i>
+                <span>YouTube</span>
+            </a>
+            <a href="https://github.com/mitchwadair" class="socials-card" target="_blank">
+                <i class="mdi mdi-github"></i>
+                <span>GitHub</span>
+            </a>
+            <a href="https://twitter.com/imMtB_" class="socials-card" target="_blank">
+                <i class="mdi mdi-twitter"></i>
+                <span>Twitter</span>
+            </a>
+        </div>
+    </div>
 </body>
 
 </html>
