--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- 구글 아이콘 -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <script defer src="main.js"></script>
+    <script defer src="main.js" type="module"></script>
     <title>핫소스</title>
 </head>
 
@@ -29,6 +29,8 @@
                     </div>
                     <div class="main-nav">
                         <ul class="nav-menu">
+                            <li class="nav-item create-post" style="display: none"><a href="#create"
+                                    onclick="route(event)">글쓰기</a></li>
                             <li class="nav-item"><a href="#about" onclick="route(event)">로그인</a></li>
                             <li class="nav-item"><a href="#lorem" onclick="route(event)">마이페이지</a></li>
                         </ul>
@@ -43,9 +45,6 @@
 
         <div class="content-container">
             <div class="create-content">
-                <span class="material-icons create-post">
-                    post_add
-                </span>
 
                 <!-- <button class="btn">글쓰기</button> -->
             </div>
