--- a/detail.html
+++ b/detail.html
@@ -13,12 +13,14 @@
   <script>
     function modalModify() {
       $(`#modalModify`).show()
+      $(`#modalDate`).show()
       $(`#modalButtonModify`).hide()
       let modifiedTitle = $(`#modalTitle`).text()
       let modifiedContent = $(`.modalContent`).text()
       console.log(modifiedContent)
       $(`#modalTitle`).hide()
       $(`.modalContent`).hide()
+      $(`#modalDate`).hide()
       $(`#modalTitleInput`).show()
       $(`#contentTextarea`).show()
       $(`#modalTitleInput`).attr("value", `${modifiedTitle}`)
@@ -26,21 +28,25 @@
     }
     function modalModifyClose() {
       $(`#modalModify`).hide()
+      $(`#modalDate`).show()
       let modifiedTitle = $(`#modalTitleInput`).val()
       let modifiedContent = $(`#contentTextarea`).val()
       console.log(modifiedContent)
       $(`#modalButtonModify`).show()
       $(`#modalTitleInput`).hide()
       $(`#contentTextarea`).hide()
+
       $(`#modalTitle`).text(modifiedTitle)
       $(`.modalContent`).text(modifiedContent)
       $(`#modalTitle`).show()
       $(`.modalContent`).show()
+
     }
   </script>
 </head>
 
 <body>
+
   <div class="wrap">
 
 
@@ -55,7 +61,7 @@
             <button id="modalButtonDelete" type="button">삭제</button>
           </div>
           <!-- 날짜 받아오기 -->
-          <div class="modalDate">2022.11.21.</div>
+          <div id="modalDate">2022.11.21.</div>
 
           <!-- 사진 가운데 -->
           <a href="http://species-in-pieces.com/#">
