--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+    <div> id="root"</div>
+    <script> src = "js/main.js" type = "module"</script>
     <div class="page-container align-center">
         <h1>About</h1>
         <div>Check Out the Socials</div>
