--- a/pages/profile.html
+++ b/pages/profile.html
@@ -6,7 +6,7 @@
     <label for="img-input">
       <img
         id="Profile-img"
-        src="./img/blank-profile-picture-973460.svg"
+        src="../static/images/blank-profile-picture-973460.svg"
         alt="프로필 사진"
       />
       <input
@@ -18,36 +18,10 @@
     </label>
     <div class="user-name">
       <input class="input-body1 font-body1" type="text" placeholder="Name" />
-      <button class="font-body1">Save</button>
+      <button class="font-body1 button-body1">Save</button>
     </div>
   </form>
   <div class="my-article">
     <h2 class="font-h2 my-article-section-title">My article</h2>
-    <!-- <ul id="article-lists">
-      <li>
-        <article class="article-card">
-          <img src="./img/RemixJS.jpg" alt="" />
-          <div class="article-card-info">
-            <h3 class="font-h3 article-title">
-              Focused on web standards and modern web app UX, you’re simply
-              going to build better websites
-            </h3>
-            <div class="article-date font-body2">2022.11.18.</div>
-          </div>
-        </article>
-      </li>
-      <li>
-        <article class="article-card">
-          <img src="./img/RemixJS.jpg" alt="" />
-          <div class="article-card-info">
-            <h3 class="font-h3 article-title">
-              Focused on web standards and modern web app UX, you’re simply
-              going to build better websites
-            </h3>
-            <div class="article-date font-body2">2022.11.18.</div>
-          </div>
-        </article>
-      </li>
-    </ul> -->
   </div>
 </div>
