--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
-    <link rel="stylesheet" href="./static/scss/main.scss" />
+    <link rel="stylesheet" href="./static/scss/profile.css" />
+    <link rel="stylesheet" href="./static/scss/main.css" />
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
