Update Router feature #1
detail 페이지 연결을 시도했습니다.
클릭한 부모 노드의 #값을 참조하게 만들어야 합니다.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
     />
     <link rel="stylesheet" href="./static/scss/profile.css" />
+    <link rel="stylesheet" href="./static/scss/detail.css" />
     <link rel="stylesheet" href="./static/scss/main.css" />
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
