--- a/pages/home.html
+++ b/pages/home.html
@@ -2,7 +2,7 @@
     <!-- <button class="btn">글쓰기</button> -->
   </div>
 
-  <div class="card-container">
+  <div class="card-container" href="#detail" onclick="route(event)">
     <div class="content-box">
       <img
         class="content-img"
@@ -16,7 +16,7 @@
     </div>
   </div>
 
-  <div class="card-container">
+  <div class="card-container" href="#detail_2" onclick="route(event)">
     <div class="content-box">
       <img
         class="content-img"
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <div class="card-container">
+  <div class="card-container" href="#detail_3" onclick="route(event)">
     <div class="content-box">
       <img
         class="content-img"
