홈페이지 연결

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,4 +1,7 @@
-<!-- <script>
+<script>
+  function
+
+
   function modalModify() {
     $(`#modalModify`).show();
     $(`#modalDate`).show();
@@ -29,7 +32,28 @@
     $(`#modalTitle`).show();
     $(`.modalContent`).show();
   }
-</script> -->
+<!-- 상세페이지 사진 수정 modalPicture을 Storage에 업로드 후 다운로드 링크를 받아서 photoURL에 저장.  -->
+    < !-- .modalPicture
+  import {
+    ref,
+    uploadString,
+    getDownloadURL,
+    deleteObject
+  } from "https://www.gstatic.com/firebasejs/9.14.0/firebase-storage.js";
+  import { v4 as uuidv4 } from "https://jspm.dev/uuid";
+
+  // Storage에서 이미지 저장 위치 지정.
+  // 현 코드에서는 userId 폴더 내에 파일명은 uuid(전세계 유일한 ID)로 설정
+  const imgRef = ref(
+    storageService,
+    `${authService.currentUser.uid}/${uuidv4()}`
+  );
+  // 파일 저장 API. 파일 포맷이 data_url인 경우
+  uploadString(imgRef, imgDataUrl, "data_url");
+
+  // 파일 삭제
+  deleteObject(ref(storageService, attachmentUrl)); -->
+</script>
 
 <div class="wrap">
   <div class="modalFirstBlack">
@@ -51,11 +75,7 @@
 
         <!-- 사진 가운데 -->
         <a href="http://species-in-pieces.com/#">
-          <img
-            class="modalPicture"
-            src="https://d3atsf3fgek2rw.cloudfront.net/content/uploads/2015/03/Screen-Shot-2015-03-20-at-16.52.22-1002x633.png"
-            alt="red panda"
-          />
+          <img class="modalPicture" src="../static/images/example2.png" alt="춘식이" />
         </a>
         <!-- 본문 내용 -->
         <div>
