--- a/index.html
+++ b/index.html
@@ -1,15 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>핫소스</title>
+    <title>로그인 페이지</title>
+    <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
+    <script src="./login.js" type="text/javascript"></script>
 </head>
 
 <body>
+    <div class="login-wrapper">
+        <h2>Login</h2>
+        <form method="post" action="서버의url" id="login-form">
+            <input type="text" name="userName" placeholder="Email">
+            <input type="password" name="userPassword" placeholder="Password">
+            <label for="remember-check">
+                <input type="checkbox" id="remember-check">아이디 저장하기
+            </label>
+            <input type="submit" value="Login">
+        </form>
+    </div>
 
+        </div>
+    </div>
 </body>
-
 </html>
