--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     />
     <link rel="stylesheet" href="./static/scss/profile.css" />
     <link rel="stylesheet" href="./static/scss/detail.css" />
-    <link rel="stylesheet" href="./static/scss/main.css" />
+    <link rel="stylesheet" href="./static/scss/main.css" /> 
+    <link rel="stylesheet" href="./static/scss/auth.css" />
+    <!-- auth.css -->
+
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
