--- a/pages/signup-modal.html
+++ b/pages/signup-modal.html
@@ -2,7 +2,7 @@
   <div class="auth-modal">
     <div class="modal-header">
       <div></div>
-      <h2>로그인</h2>
+      <h2>회원가입</h2>
       <div>
         <span class="material-icons">close</span>
       </div>
@@ -17,11 +17,10 @@
       />
       <label for="password">PW</label>
       <input type="password" id="password" class="input-body1" />
-      <input type="submit" class="login btn" value="로그인"></input>
+      <!-- 비밀번호가 위 input이랑 일치하는지 확인합니다. -->
+      <label for="password-confirm">PW confirm</label>
+      <input type="password" id="password-confirm" class="input-body1" />
+      <input type="submit" class="login btn" value="회원가입"></input>
     </form>
-    <!-- <a href="#login" onclick="route(event)">로그인</a> -->
-    <a href="#signup" onclick="route(event)" class="signup btn"> 회원가입 </a>
-    <a class="google btn">구글 로그인</a>
-    <a class="kakao btn">카카오 로그인</a>
   </div>
 </div>
