--- a/pages/signup-modal.html
+++ b/pages/signup-modal.html
@@ -1,10 +1,10 @@
-<div class="overlay">
+<div class="overlay" onclick="closePopup(event)">
   <div class="auth-modal">
     <div class="modal-header">
       <div></div>
       <h2>회원가입</h2>
       <div>
-        <span class="material-icons">close</span>
+        <span class="material-icons" onclick="closePopup(event)">close</span>
       </div>
     </div>
     <form action="" method="post">
