--- a/pages/login-modal.html
+++ b/pages/login-modal.html
@@ -1,10 +1,10 @@
-<div class="overlay">
+<div class="overlay" onclick="closePopup(event)">
   <div class="auth-modal">
     <div class="modal-header">
       <div></div>
       <h2>로그인</h2>
       <div>
-        <span class="material-icons">close</span>
+        <span class="material-icons" onclick="closePopup(event)">close</span>
       </div>
     </div>
     <form action="" method="post">
@@ -19,8 +19,7 @@
       <input type="password" id="password" class="input-body1" />
       <input type="submit" class="login btn" value="로그인"></input>
     </form>
-    <!-- <a href="#login" onclick="route(event)">로그인</a> -->
-    <a href="#signup" onclick="route(event)" class="signup btn"> 회원가입 </a>
+    <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
     <a class="google btn">구글 로그인</a>
     <a class="kakao btn">카카오 로그인</a>
   </div>
