--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                                 <a class="nav-item-btn" href="#create" onclick="route(event)">글쓰기</a>
                             </li>
                             <li class="nav-item">
-                                <div class="nav-item-btn" href="#login" onclick="openPopupLogin(event)">로그인</div>
+                                <div class="nav-item-btn" href="#login" onclick="openPopupLogin()">로그인</div>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-item-btn" href="#myPage" onclick="route(event)">마이페이지</a>
@@ -58,7 +58,7 @@
                     <div></div>
                     <h2>로그인</h2>
                     <div>
-                      <span class="material-icons" onclick="closePopup(event)">close</span>
+                      <span class="material-icons" onclick="closePopup()">close</span>
                     </div>
                   </div>
                   <form action="" method="post">
@@ -82,7 +82,7 @@
                     <div></div>
                     <h2>회원가입</h2>
                     <div>
-                      <span class="material-icons" onclick="closePopup(event)">close</span>
+                      <span class="material-icons" onclick="closePopup()">close</span>
                     </div>
                   </div>
                   <form action="" method="post">
@@ -101,7 +101,7 @@
                     <input type="submit" class="login btn" value="회원가입"></input>
                   </form>
             </div>
-            <div class="overlay" onclick="closePopup(event)"></div>
+            <div class="overlay" onclick="closePopup()"></div>
         </div>
         <div class="content-container"></div>
 </body>
