Update input tag id
id가 동일해서 각각 다르게 변경했습니다.

--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
                     </div>
                   </div>
                   <form action="" method="post">
-                    <label for="email">ID</label>
+                    <label for="login-email">ID</label>
                     <input
                       type="email"
-                      id="email"
+                      id="login-email"
                       class="input-body1"
                       placeholder="username@email.com"
                     />
-                    <label for="password">PW</label>
-                    <input type="password" id="password" class="input-body1" />
+                    <label for="login-password">PW</label>
+                    <input type="password" id="login-password" class="input-body1" />
                     <input type="submit" class="login btn" value="로그인"></input>
                   </form>
                   <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
@@ -97,15 +97,15 @@
                     </div>
                   </div>
                   <form action="" method="post">
-                    <label for="email">ID</label>
+                    <label for="signup-email">ID</label>
                     <input
                       type="email"
-                      id="email"
+                      id="signup-email"
                       class="input-body1"
                       placeholder="username@email.com"
                     />
-                    <label for="password">PW</label>
-                    <input type="password" id="password" class="input-body1" />
+                    <label for="signup-password">PW</label>
+                    <input type="password" id="signup-password" class="input-body1" />
                     <!-- 비밀번호가 위 input이랑 일치하는지 확인합니다. -->
                     <label for="password-confirm">PW confirm</label>
                     <input type="password" id="password-confirm" class="input-body1" />
