--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,6 +1,10 @@
 <!-- Side bar 보존 -->
 <div id="container">
-  <form id="profile" onsubmit="">
+  <form
+    id="profile"
+    onclick="console.log('test click')"
+    onsubmit="console.log('test submit')"
+  >
     <h1 class="font-h2" id="Profile-title">Profile</h1>
     <!-- https://github.com/rjc1704/Firebase-Lecture-by-Vanilla-JS/blob/master/pages/profile.html -->
     <label for="img-input">
