for merge auth-setup

--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
                       <span class="material-icons" onclick="closePopup()">close</span>
                     </div>
                   </div>
-                  <!-- <form action="/api/jeongik/comments" method="post"></form> -->
                   <form action="" method="SIGN IN" onclick="handleAuth(event)">
                     <label for="login-email">ID</label>
                     <input
@@ -87,7 +86,7 @@
                       <span class="material-icons" onclick="closePopup()">close</span>
                     </div>
                   </div>
-                  <form action="" method="SIGN IN" onclick="handleAuth(event)">
+                  <form action="" method="SIGN UP" onclick="handleAuth(event)">
                     <label for="signup-email">ID</label>
                     <input
                       type="email"
@@ -98,8 +97,8 @@
                     <label for="signup-password">PW</label>
                     <input type="password" id="signup-password" class="input-body1" />
                     <!-- 비밀번호가 위 input이랑 일치하는지 확인합니다. -->
-                    <label for="password-confirm">PW confirm</label>
-                    <input type="password" id="password-confirm" class="input-body1" />
+                    <!-- <label for="password-confirm">PW confirm</label>
+                    <input type="password" id="password-confirm" class="input-body1" /> -->
                     <input type="submit" class="login btn" value="회원가입" />
                   </form>
             </div>
