--- a/index.html
+++ b/index.html
@@ -2,107 +2,99 @@
 <html lang="ko">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- css -->
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css"
-    />
-    <link rel="stylesheet" href="./static/scss/profile.css" />
-    <link rel="stylesheet" href="./static/scss/detail.css" />
-    <link rel="stylesheet" href="./static/scss/main.css" />
-    <link rel="stylesheet" href="./static/scss/auth.css" />
-    <!-- auth.css -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- css -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css" />
+  <link rel="stylesheet" href="./static/scss/profile.css" />
+  <link rel="stylesheet" href="./static/scss/detail.css" />
+  <link rel="stylesheet" href="./static/scss/main.css" />
+  <link rel="stylesheet" href="./static/scss/auth.css" />
+  <!-- auth.css -->
 
-    <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Pacifico:wght@400;700&display=swap" rel="stylesheet" />
-    <!-- 구글 아이콘 -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <script defer src="main.js" type="module"></script>
-    <title>핫소스</title>
+  <!-- font -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico:wght@400;700&display=swap" rel="stylesheet" />
+  <!-- 구글 아이콘 -->
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+  <script defer src="main.js" type="module"></script>
+  <title>핫소스</title>
 </head>
 
 <body>
-    <div id="root">
-        <nav id="navbar" class="navbar navbar-bg-transparent">
-            <div class="nav-container">
-                <div class="nav-inner">
-                    <div class="nav-logo-container">
-                        <a class="logo" href="/" onclick="route(event)">HotSix</a>
-                    </div>
-                    <div class="main-nav">
-                        <ul class="nav-menu">
-                            <li class="nav-item create-post" style="display: none">
-                                <a class="nav-item-btn" href="#create" onclick="route(event)">글쓰기</a>
-                            </li>
-                            <li class="nav-item">
-                                <div class="nav-item-btn" href="#login" onclick="openPopupLogin()">로그인</div>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-item-btn" href="#myPage" onclick="route(event)">마이페이지</a>
-                            </li>
-                        </ul>
-                    </div>
+  <div id="root">
+    <nav id="navbar" class="navbar navbar-bg-transparent">
+      <div class="nav-container">
+        <div class="nav-inner">
+          <div class="nav-logo-container">
+            <a class="logo" href="/" onclick="route(event)">HotSix</a>
+          </div>
+          <div class="main-nav">
+            <ul class="nav-menu">
+              <li class="nav-item create-post" style="display: none">
+                <a class="nav-item-btn" href="#create" onclick="route(event)">글쓰기</a>
+              </li>
+              <li class="nav-item">
+                <div class="nav-item-btn" id="login" href="#login" onclick="openPopupLogin()">로그인</div>
+              </li>
+              <li class="nav-item">
+                <div class="nav-item-btn" id="logout" href="#logout" onclick="logout()" style="display: none;">로그아웃
                 </div>
-            </div>
-            <div class="progress-container">
-                <div class="progress-bar"></div>
-            </div>
-        </nav>
-        <div class="content-container"></div>
-        <div class="auth-container">
-            <div class="auth-modal login-modal">
-                <div class="modal-header">
-                    <div></div>
-                    <h2>로그인</h2>
-                    <div>
-                      <span class="material-icons" onclick="closePopup()">close</span>
-                    </div>
-                  </div>
-                  <form action="" method="SIGN IN" onclick="handleAuth(event)">
-                    <label for="login-email">ID</label>
-                    <input
-                      type="email"
-                      id="login-email"
-                      class="input-body1"
-                      placeholder="username@email.com"
-                    />
-                    <label for="login-password">PW</label>
-                    <input type="password" id="login-password" class="input-body1" />
-                    <input type="submit" id="authBtn" class="login btn" value="로그인" />
-                  </form>
-                  <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
-                  <a class="google btn">구글 로그인</a>
-                  <a class="kakao btn">카카오 로그인</a>
-            </div>
-            <div class="auth-modal signup-modal">
-                <div class="modal-header">
-                    <div></div>
-                    <h2>회원가입</h2>
-                    <div>
-                      <span class="material-icons" onclick="closePopup()">close</span>
-                    </div>
-                  </div>
-                  <form action="" method="SIGN UP" onclick="handleAuth(event)">
-                    <label for="signup-email">ID</label>
-                    <input
-                      type="email"
-                      id="signup-email"
-                      class="input-body1"
-                      placeholder="username@email.com"
-                    />
-                    <label for="signup-password">PW</label>
-                    <input type="password" id="signup-password" class="input-body1" />
-                    <!-- 비밀번호가 위 input이랑 일치하는지 확인합니다. -->
-                    <!-- <label for="password-confirm">PW confirm</label>
-                    <input type="password" id="password-confirm" class="input-body1" /> -->
-                    <input type="submit" class="login btn" value="회원가입" />
-                  </form>
-            </div>
-            <div class="overlay" onclick="closePopup()"></div>
+              </li>
+              <li class="nav-item">
+                <a class="nav-item-btn" href="#myPage" onclick="route(event)">마이페이지</a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+      <div class="progress-container">
+        <div class="progress-bar"></div>
+      </div>
+    </nav>
+    <div class="content-container"></div>
+    <div class="auth-container">
+      <div class="auth-modal login-modal">
+        <div class="modal-header">
+          <div></div>
+          <h2>로그인</h2>
+          <div>
+            <span class="material-icons" onclick="closePopup()">close</span>
+          </div>
+        </div>
+        <form action="" method="SIGN IN" onclick="handleAuth(event)">
+          <label for="login-email">ID</label>
+          <input type="email" id="login-email" class="input-body1" placeholder="username@email.com" />
+          <label for="login-password">PW</label>
+          <input type="password" id="login-password" class="input-body1" />
+          <input type="submit" id="authBtn" class="login btn" value="로그인" />
+        </form>
+        <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
+        <a class="google btn">구글 로그인</a>
+        <a class="kakao btn">카카오 로그인</a>
+      </div>
+      <div class="auth-modal signup-modal">
+        <div class="modal-header">
+          <div></div>
+          <h2>회원가입</h2>
+          <div>
+            <span class="material-icons" onclick="closePopup()">close</span>
+          </div>
+        </div>
+        <form action="" method="SIGN UP" onclick="handleAuth(event)">
+          <label for="signup-email">ID</label>
+          <input type="email" id="signup-email" class="input-body1" placeholder="username@email.com" />
+          <label for="signup-password">PW</label>
+          <input type="password" id="signup-password" class="input-body1" />
+          <!-- 비밀번호가 위 input이랑 일치하는지 확인합니다. -->
+          <!-- <label for="password-confirm">PW confirm</label>
+                    <input type="password" id="password-confirm" class="input-body1" /> -->
+          <input type="submit" class="login btn" value="회원가입" />
+        </form>
+      </div>
+      <div class="overlay" onclick="closePopup()"></div>
+    </div>
 </body>
+
 </html>
