Update Google login
구글 로그인이 모달을 통해서 가능하도록 업데이트

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <input type="submit" id="authBtn" class="login btn" value="로그인" />
         </form>
         <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
-        <a class="google btn">구글 로그인</a>
-        <a class="kakao btn">카카오 로그인</a>
-      </div>
+        <button name="google" class="google font-body1 btn" onclick="socialLogin(event)">Google</button>
+        <button name="kakao" class="kakao font-body1 btn" onclick="socialLogin(event)">GitHub</button>
+        </div>
       <div class="auth-modal signup-modal">
         <div class="modal-header">
           <div></div>
