--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </form>
         <div onclick="switchPopupSignup()" class="signup btn"> 회원가입 </div>
         <button name="google" class="google font-body1 btn" onclick="socialLogin(event)">Google</button>
-        <button name="kakao" class="kakao font-body1 btn" onclick="socialLogin(event)">GitHub</button>
+        <button name="github" class="github font-body1 btn" onclick="socialLogin(event)">GitHub</button>
         </div>
       <div class="auth-modal signup-modal">
         <div class="modal-header">
