로그인 했을때 글작성 페이지 생성

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,5 +1,7 @@
-<div class="create-content">
-  <!-- <button class="btn">글쓰기</button> -->
+<div class="create-content" style="display: none;" onclick="save_comment()">
+  <span class="material-symbols-outlined post-add-btn">
+    note_add
+  </span>
 </div>
 
 <div class="card-container" href="#detail" onclick="modalup(event)">
