--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
         'opsz' 48
     }
   </style>
+  <style>
+    .material-symbols-outlined {
+      font-variation-settings:
+        'FILL' 0,
+        'wght' 700,
+        'GRAD' 0,
+        'opsz' 48
+    }
+  </style>
   <div id="root">
     <nav id="navbar" class="navbar navbar-bg-transparent">
       <div class="nav-container">
