[로그인상태] 글작성 route 연결완료

--- a/pages/home.html
+++ b/pages/home.html
@@ -1,7 +1,9 @@
-<div class="create-content" style="display: none;" onclick="save_comment()">
-  <span class="material-symbols-outlined post-add-btn">
-    note_add
-  </span>
+<div class="create-content" style="display: none;">
+  <label id="post-add-btn" for="" onclick="gotoPage()">
+    <span class="material-symbols-outlined">
+      note_add
+    </span>
+  </label>
 </div>
 
 <div class="card-container" href="#detail" onclick="modalup(event)">
