--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="./static/scss/detail.css" />
   <link rel="stylesheet" href="./static/scss/main.css" />
   <link rel="stylesheet" href="./static/scss/auth.css" />
+  <link rel="stylesheet" href="./static/scss/createPost.css" />
   <!-- auth.css -->
 
   <!-- font -->
