--- a/pages/profile.html
+++ b/pages/profile.html
@@ -1,10 +1,6 @@
 <!-- Side bar 보존 -->
 <div id="container">
-  <form
-    id="profile"
-    onclick="console.log('test click')"
-    onsubmit="console.log('test submit')"
-  >
+  <form id="profile" onsubmit="changeProfile(event)">
     <h1 class="font-h2" id="Profile-title">Profile</h1>
     <!-- https://github.com/rjc1704/Firebase-Lecture-by-Vanilla-JS/blob/master/pages/profile.html -->
     <label for="img-input">
@@ -21,8 +17,18 @@
       />
     </label>
     <div class="user-name">
-      <input class="input-body1 font-body1" type="text" placeholder="Name" />
-      <button class="font-body1 button-body1">Save</button>
+      <input
+        id="profile-name"
+        class="input-body1 submit-input font-body1"
+        type="text"
+        placeholder="Name"
+      />
+      <input
+        id="submit-btn"
+        type="submit"
+        class="font-body1 submit-btn button-body1"
+        value="Save"
+      />
     </div>
   </form>
   <div class="my-article">
