--- a/index.html
+++ b/index.html
@@ -46,18 +46,17 @@
           </div>
           <div class="main-nav">
             <ul class="nav-menu">
-              <li class="nav-item create-post" style="display: none">
-                <a class="nav-item-btn" href="#create" onclick="route(event)">글쓰기</a>
+              <li class="nav-item create-post">
+                <a class="nav-item-btn" id="create" href="#create" onclick="route(event)">글쓰기</a>
               </li>
               <li class="nav-item">
                 <div class="nav-item-btn" id="login" href="#login" onclick="openPopupLogin()">로그인</div>
               </li>
               <li class="nav-item">
-                <div class="nav-item-btn" id="logout" href="#logout" onclick="logout()" style="display: none;">로그아웃
-                </div>
+                <a class="nav-item-btn" id="my-page" href="#myPage" onclick="route(event)">마이페이지</a>
               </li>
               <li class="nav-item">
-                <a class="nav-item-btn" href="#myPage" onclick="route(event)">마이페이지</a>
+                <div class="nav-item-btn" id="logout" href="#logout" onclick="logout()" >로그아웃</div>
               </li>
             </ul>
           </div>
