Read 기능 완성 , 페이지 눌렀을때 해당페이지에 내용들을 서버에서 불러와 보여줌

--- a/pages/createPost.html
+++ b/pages/createPost.html
@@ -13,6 +13,11 @@
         <input type="input" id="postTitle" class="form__field" name="title" placeholder="title" required />
         <label for="" class="form__label">제목</label>
     </div>
+    <!-- 서브 제목  -->
+    <div class="createPost-title subTitle field">
+        <input type="input" id="postsubTitle" class="form__field" name="title" placeholder="title" required />
+        <label for="" class="form__label">소제목</label>
+    </div>
     <!-- 글작성 -->
     <div class="createPost-desc">
         <label for="content-label">내용</label>
