--- a/pages/detail.html
+++ b/pages/detail.html
@@ -1,4 +1,4 @@
-<script>
+<!-- <script>
   function modalModify() {
     $(`#modalModify`).show();
     $(`#modalDate`).show();
@@ -50,7 +50,7 @@
 
   // 파일 삭제
   deleteObject(ref(storageService, attachmentUrl)); 
-</script>
+</script> -->
 
 <div class="wrap">
   <div class="modalFirstBlack">
