글쓰기 페이지 레이아웃 작업완료

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           <div class="main-nav">
             <ul class="nav-menu">
               <li class="nav-item create-post">
-                <a class="nav-item-btn" id="create" href="#create" onclick="route(event)">글쓰기</a>
+                <a class="nav-item-btn" id="create" href="#createPost" onclick="gotoPage()">글쓰기</a>
               </li>
               <li class="nav-item" id="login">
                 <div class="nav-item-btn" href="#login" onclick="openPopupLogin()">로그인</div>
@@ -67,7 +67,7 @@
                 <a class="nav-item-btn" id="my-page" href="#myPage" onclick="route(event)">마이페이지</a>
               </li>
               <li class="nav-item">
-                <div class="nav-item-btn" id="logout" href="#logout" onclick="logout()" >로그아웃</div>
+                <div class="nav-item-btn" id="logout" href="#logout" onclick="logout()">로그아웃</div>
               </li>
             </ul>
           </div>
