Update delete modal

--- a/pages/detail.html
+++ b/pages/detail.html
@@ -72,17 +72,29 @@
         <div class="content-container">
           <div id="modalDate">2022.11.21.</div>
           <a href="#">
-            <img class="modalPicture" src="../static/images/example2.png" alt="춘식이" />
+            <img
+              class="modalPicture"
+              src="../static/images/example2.png"
+              alt="춘식이"
+            />
           </a>
           <div>
             <h3 class="modalContent">본문내용 자리</h3>
             <textarea id="contentTextarea"></textarea>
           </div>
         </div>
-
-
       </div>
       <button type="button" class="modalButtonClose">닫기</button>
     </div>
   </div>
+  <!-- 삭제 확인 모달 -->
+  <section class="modal modal-section type-confirm">
+    <div class="enroll_box">
+      <p class="menu_msg"></p>
+    </div>
+    <div class="enroll_btn">
+      <button class="btn pink_btn btn_ok">확인</button>
+      <button class="btn gray_btn modal_close">취소</button>
+    </div>
+  </section>
 </div>
