수정 페이지 서버에 이미지 안올라가는 오류 수정  / 기본컨텐츠 데이터 추가함

--- a/pages/profile.html
+++ b/pages/profile.html
@@ -31,7 +31,9 @@
       />
     </div>
   </form>
-  <div class="my-article">
+
+  <!-- 추후 개발  -->
+  <!-- <div class="my-article">
     <h2 class="font-h2 my-article-section-title">My article</h2>
-  </div>
+  </div> -->
 </div>
